--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,6 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
-
     <application
         android:name="org.litepal.LitePalApplication"
         android:allowBackup="true"
@@ -27,7 +26,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".FragmentActivity"></activity>
+        <activity android:name=".WeatherDataActivity"></activity>
+        <activity android:name=".FragmentActivity" />
         <activity android:name=".ShowImageActivity" />
         <activity android:name=".LBSActivity" />
 
