--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.example.materialtest"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -35,6 +35,12 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.4.1'
     implementation 'com.google.code.gson:gson:2.7'
     implementation 'org.litepal.android:core:1.4.1'
+    implementation 'org.samba.jcifs:jcifs:1.3.18-kohsuke-1'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
+
+
+//    implementation 'com.diogobernardino:williamchart:3.3.0'
+    implementation 'com.github.lecho:hellocharts-library:1.5.8'
 
 
 }
