--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,14 +22,31 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".WeatherDataActivity"></activity>
+        <activity android:name=".TempActivity"></activity>
+        <activity android:name=".ControlActivity" />
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".ResetpwdActivity" />
+        <activity
+            android:name=".LoginActivity"
+            android:label="家庭卫士">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".LBSDataActivity" />
+        <activity android:name=".WeatherDataActivity" />
         <activity android:name=".FragmentActivity" />
         <activity android:name=".ShowImageActivity" />
-        <activity android:name=".LBSActivity" />
+        <activity
+            android:name=".LBSActivity"
+            android:label="所在位置" />
 
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
@@ -43,11 +60,13 @@
         <activity
             android:name=".MainActivity"
             android:label="菜单栏">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
     </application>
 
